labs/lab4/spring-gumball-v2/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-gumball-v2
  namespace: default
  labels:
    name: spring-gumball-v2
spec:
  containers:
    - image: cassidychu/spring-gumball-v2:v1.0
      name: spring-gumball-v2
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
