labs/lab4/spring-gumball-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-gumball-v2-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: spring-gumball-v2
