labs/lab4/spring-gumball-v2/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "spring-gumball-v2-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "spring-gumball-v2-service"
    servicePort: 8080
